Set overflow for svgs to hidden to see if that fixes map problem in IE

--- a/css/style.css
+++ b/css/style.css
@@ -923,6 +923,10 @@ a.peerGroupProfileLink.peerGroup10 {
 
 
 /********** MAP STYLES ***************/
+svg {
+    overflow: hidden;
+}
+
 #peerGroupMap {
     position: relative;
 }
